--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/pwa": "^3.3.5",
+    "consola": "latest",
     "core-js": "^3.31.1",
     "nuxt": "2.17.1",
     "vue": "2.7.14",
@@ -33,14 +34,17 @@
     "@babel/eslint-parser": "^7.22.9",
     "@commitlint/cli": "^17.6.7",
     "@commitlint/config-conventional": "^17.6.7",
+    "@nuxt/test-utils": "0.2.2",
     "@nuxt/types": "^2.17.1",
     "@nuxt/typescript-build": "^3.0.1",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/stylelint-module": "^5.1.0",
     "@nuxtjs/tailwindcss": "^6.8.0",
+    "@playwright/test": "^1.36.1",
+    "@types/jest": "^29.5.3",
     "@vue/test-utils": "legacy",
-    "babel-core": "7.0.0-bridge.0",
+    "babel-core": "6.26.3",
     "babel-jest": "^29.6.1",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.8.0",
@@ -54,12 +58,13 @@
     "postcss": "^8.4.26",
     "postcss-html": "^1.5.0",
     "prettier": "2.8.8",
-    "stylelint": "^15.10.2",
+    "stylelint": "^14.16.1",
     "stylelint-config-prettier": "^9.0.5",
-    "stylelint-config-recommended-vue": "^1.5.0",
-    "stylelint-config-standard": "^34.0.0",
+    "stylelint-config-recommended": "9.0.0",
+    "stylelint-config-recommended-vue": "1.4.0",
+    "stylelint-config-standard": "29.0.0",
     "ts-jest": "^29.1.1",
-    "vue-jest": "^3.0.7",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "vue-jest": "^3.0.7"
   }
 }
